--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,10 +1,10 @@
 #Minecraft server properties
-#Sun Dec 08 18:19:57 UTC 2024
-allow-flight=true
+#Sun Dec 08 18:48:14 UTC 2024
+allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
-difficulty=hard
+difficulty=easy
 enable-command-block=false
 enable-jmx-monitoring=false
 enable-query=false
