--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sun Dec 08 19:15:10 UTC 2024
+#Sun Dec 08 22:12:37 UTC 2024
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
@@ -29,7 +29,7 @@ max-chained-neighbor-updates=1000000
 max-players=20
 max-tick-time=60000
 max-world-size=29999984
-motd=
+motd=§r              §5§l(MSX)  §dHosting Gratuito§r\n          §f§nhttps\://discord.gg/w9xt8ydNZe
 network-compression-threshold=256
 online-mode=false
 op-permission-level=4
